@startuml

title __MODEL's Class Diagram__\n

  namespace  {
    namespace odel {
      class model.Administrator {
          - allAppointments : ArrayList<Appointment>
          - scan : Scanner
          + Administrator()
          + approveRequest()
          + displayMenu()
          + manageInventory()
          + manageStaff()
          - viewAppointment()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Appointment {
          - date : String
          - status : String
          - time : String
          + Appointment()
          + getAppointmentOutcome()
          + getDate()
          + getDoctor()
          + getPatient()
          + getStatus()
          + getTime()
          + printInfo()
          + printInfoForAdmin()
          + setStatus()
          + updateAppointment()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.AppointmentOutcomeRecord {
          - consultationNotes : String
          - date : String
          - diagnoses : String
          - prescriptionList : ArrayList<Prescription>
          - treatment : String
          + AppointmentOutcomeRecord()
          + getConsultationNotes()
          + getDate()
          + getDiagnoses()
          + getPrescriptionList()
          + getTreatment()
          + printInfo()
          + setConsultationNotes()
          + setDiagnoses()
          + setPrescriptionList()
          + setTreatment()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Availability {
          - date : String
          - status : String
          - time : String
          + Availability()
          + getDate()
          + getDoctor()
          + getStatus()
          + getTime()
          + setStatus()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Available {
          - availableDates : ArrayList<Availability>
          - scan : Scanner
          + addAvailableDates()
          + selectAvailableSlot()
          + updateAvailableDates()
          + viewAvailableAppointmentSlots()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Doctor {
          - allAppointmentOutcomeRecords : ArrayList<AppointmentOutcomeRecord>
          - appointmentRequests : ArrayList<Appointment>
          - patientMedicalRecords : ArrayList<MedicalRecord>
          - scan : Scanner
          - storage : ArrayList<Inventory>
          - upcomingAppointments : ArrayList<Appointment>
          + Doctor()
          + acceptOrDecline()
          + displayMenu()
          + incomingAppointment()
          + recordAppointmentOutcome()
          + removeIncommingAppointment()
          + setAvailability()
          + updatePatientMedicalRecord()
          + viewPatientMedicalRecords()
          + viewPersonalSchedule()
          + viewUpcomingAppointments()
          - updatePatientList()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Inventory {
          - alertLevel : int
          - medicineName : String
          - reqStatus : String
          - status : String
          - stockAvailable : int
          + Inventory()
          + display()
          + getName()
          + getStatus()
          + getStock()
          + getreqStatus()
          + setAlertLevel()
          + setStatus()
          + setStock()
          + setreqStatus()
          + updateStock()
          - lowStockAlert()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.MedicalRecord {
          - bloodType : String
          - dateOfBirth : String
          - diagnosesTreatmentPrescription : ArrayList<AppointmentOutcomeRecord>
          - email : String
          - gender : String
          - name : String
          - userId : String
          + MedicalRecord()
          + getName()
          + getUserId()
          + printRecord()
          + updateRecord()
          + updateRecord()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Patient {
          - allAppointments : ArrayList<Appointment>
          - appointmentOutcomeRecords : ArrayList<AppointmentOutcomeRecord>
          - scan : Scanner
          - scheduledAppointments : ArrayList<Appointment>
          + Patient()
          + cancelAppointment()
          + displayMenu()
          + getMedicalRecord()
          + getScheduledAppointments()
          + rescheduleAppointment()
          + scheduleAppointment()
          + updateAppointmentOutcomeRecords()
          + updatePatientOutcome()
          + updatePersonalInfo()
          + viewAppointmentOutcomeRecords()
          + viewMedicalRecord()
          + viewScheduledAppointments()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Pharmacist {
          - allAppointmentOutcomeRecords : ArrayList<AppointmentOutcomeRecord>
          - allInventoryItems : ArrayList<Inventory>
          - scan : Scanner
          + Pharmacist()
          + displayMenu()
          + replenishmentRequest()
          + updatePrescriptionStatus()
          + viewAppointmentOutcomeRecords()
          + viewMedicationInventory()
          - updateInventory()
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Prescription {
          - medicineName : String
          - status : String
          + Prescription()
          + display()
          + getName()
          + getStatus()
          + updateStatus()
      }
    }
  }
  

  namespace  {
    namespace odel {
      abstract class model.User {
          - age : int
          - gender : String
          - name : String
          - password : String
          - userId : String
          + User()
          + changePassword()
          {abstract} + displayMenu()
          + getAge()
          + getGender()
          + getName()
          + getPassword()
          + getUserId()
          + setAge()
          + setGender()
          + setName()
      }
    }
  }
  

  model.Administrator -up-|> model.User
  model.Administrator o-- controller.InventoryManagement : inventoryManagement
  model.Administrator o-- controller.StaffManagement : staffManagement
  model.Appointment o-- model.Doctor : doctor
  model.Appointment o-- model.AppointmentOutcomeRecord : outcome
  model.Appointment o-- model.Patient : patient
  model.Availability o-- model.Doctor : doctor
  model.Doctor -up-|> model.User
  model.Doctor o-- model.Available : availableDates
  model.Doctor o-- model.Available : personalSchedule
  model.Patient -up-|> model.User
  model.Patient o-- model.Available : availableDates
  model.Patient o-- model.MedicalRecord : medicalRecord
  model.Pharmacist -up-|> model.User


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
